kustomize/internal/intranet-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: intranet
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: intranet-app
