kustomize/internal/intranet-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: intranet-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: intranet.malumn.local
    http:
      paths:
      - backend:
          service:
            name: intranet
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
